# NVIDIA-skills-Assesment

./: CMakeLists.txt
include/: wasm_executor.hpp  wasm_interpreter.hpp  wasm_memory.hpp  wasm_parser.hpp  wasm_stack.hpp
src/: main.cpp  was.executor.cpp  was.parser.cpp  was_executor.cpp  was_interpreter.cpp  was_memory.cpp  was_parser.cpp  was_stack.cpp
tests/: CMakeLists.txt
utils/: struct.h
